--- a/personalwebpage2/src/styles/nav.css
+++ b/personalwebpage2/src/styles/nav.css
@@ -5,6 +5,7 @@ header {
 	height: 80px;
 	padding: 0 2rem;
     color: var(--main-white);
+    background-color: var(--main-blue);
 }
 
 header .nav-btn {
@@ -22,12 +23,12 @@ header .nav-btn {
 .nav {
     background-color: var(--main-blue);
     display: flex;
-    justify-content: space-between;
     align-items: center;
 }
 
 .site-title {
-    font-size: 3rem;
+    font-size: 2rem;
+    font-family: proximanova-medium;
 }
 
 header ul {
@@ -66,6 +67,7 @@ header li:hover {
         gap: 1.5rem;
         transition: 0.8s;
         transform: translateY(-100vh);
+        z-index:-1;
     }
     .nav ul{
         flex-direction: column;
@@ -73,6 +75,7 @@ header li:hover {
 
     header .responsive_nav{
         transform: none;
+        z-index:2
     }
     .nav-close-btn {
         position: absolute;
