--- a/personalwebpage2/src/styles/nav.css
+++ b/personalwebpage2/src/styles/nav.css
@@ -32,7 +32,7 @@ header .nav-btn {
 }
 
 header ul {
-    padding: 0;
+    padding: 1rem;
     margin: 0;
     list-style: none;
     display: flex;
@@ -43,9 +43,10 @@ header ul {
 header a {
     color: inherit;
     text-decoration: none;
+    padding:1rem;
 }
 
-header li:hover {
+.nav a:hover {
     background-color: #777;
 }
 
@@ -67,7 +68,7 @@ header li:hover {
         gap: 1.5rem;
         transition: 0.8s;
         transform: translateY(-100vh);
-        z-index:-1;
+        z-index:999;
     }
     .nav ul{
         flex-direction: column;
@@ -75,7 +76,7 @@ header li:hover {
 
     header .responsive_nav{
         transform: none;
-        z-index:2
+        z-index:999;
     }
     .nav-close-btn {
         position: absolute;
