Navbar goes away when clicking responsive link

--- a/personalwebpage2/src/styles/main.css
+++ b/personalwebpage2/src/styles/main.css
@@ -7,6 +7,10 @@
     color: var(--main-white);
 }
 
+html {
+    scroll-behavior: smooth;
+}
+
 :root{
     --main-yellow : #16f0bd;
     --main-white : #fff7f7;
