--- a/personalwebpage2/src/styles/about.css
+++ b/personalwebpage2/src/styles/about.css
@@ -3,6 +3,9 @@
     justify-content: center;
     min-height:100vh;
     width:100vw;
+    padding: 5%;
     display: flex;
+    align-items: center;
+    flex-direction: column;
 
 }
