--- a/personalwebpage2/src/styles/nav.css
+++ b/personalwebpage2/src/styles/nav.css
@@ -1,5 +1,9 @@
 header {
     display: flex;
+    position: absolute;
+    top:0;
+    left:0;
+    right:0;
     align-items: center;
 	justify-content: space-between;
 	height: 80px;
@@ -51,6 +55,39 @@ header a {
     background-color: #777;
 }
 
+.scrollingNav {
+    position:fixed;
+    top:0;
+    right:35%;
+    justify-content: space-between;
+    align-items: center;
+    padding:1rem;
+    white-space: nowrap;
+}
+
+.scrollingNav ul {
+    padding: 1rem;
+    margin: 0;
+    list-style: none;
+    display: flex;
+    gap: 3rem;
+    font-size: 1rem;
+    background: #73AD21;
+    border-radius: 20px;
+
+}
+
+.scrollingNav a {
+    text-decoration: none;
+    border-radius: 20px;
+    background: #73AD21;
+    padding: 10px;
+}
+
+.scrollingNav a:hover {
+    background-color: #777;
+}
+
 @media only screen and (max-width: 1100px){
     header .nav-btn {
         visibility: visible;
@@ -74,7 +111,9 @@ header a {
     .nav ul{
         flex-direction: column;
     }
-
+    header {
+        z-index: 999;
+    }
     header .responsive_nav{
         transform: none;
         z-index:999;
