--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -35,6 +35,10 @@ header .nav-btn {
     font-family: proximanova-medium;
 }
 
+.site-title:hover {
+    background-color: #777;
+}
+
 header ul {
     padding: 1rem;
     margin: 0;
@@ -49,6 +53,7 @@ header a {
     text-decoration: none;
     padding:1rem;
     white-space: nowrap;
+    border-radius: 20px;
 }
 
 .nav a:hover {
@@ -56,10 +61,12 @@ header a {
 }
 
 .scrollingNav {
+    display:flex;
     position:fixed;
     top:0;
-    right:35%;
-    justify-content: space-between;
+    right:0;
+    left:0;
+    justify-content: center;
     align-items: center;
     padding:1rem;
     white-space: nowrap;
@@ -75,6 +82,10 @@ header a {
     background: #73AD21;
     border-radius: 20px;
 
+}
+
+.scrollingNav li {
+    background: #73AD21;
 }
 
 .scrollingNav a {
