Modified about page

--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -10,6 +10,7 @@ header {
 	padding: 0 2rem;
     color: var(--main-white);
     background-color: var(--main-blue);
+    align-items:baseline;
 }
 
 header .nav-btn {
@@ -31,8 +32,8 @@ header .nav-btn {
 }
 
 .site-title {
-    font-size: 2rem;
-    font-family: proximanova-medium;
+    font-size:1vw;
+    font-family: roboto-flex;
 }
 
 .site-title:hover {
@@ -45,7 +46,7 @@ header ul {
     list-style: none;
     display: flex;
     gap: 4rem;
-    font-size: 1.7rem;
+    font-size: 1vw;
 }
 
 header a {
@@ -70,6 +71,7 @@ header a {
     align-items: center;
     padding:1rem;
     white-space: nowrap;
+    background-color: transparent;
 }
 
 .scrollingNav ul {
@@ -93,6 +95,8 @@ header a {
     border-radius: 20px;
     background: #73AD21;
     padding: 10px;
+    font-size: .75vw;
+
 }
 
 .scrollingNav a:hover {
@@ -133,5 +137,8 @@ header a {
         position: absolute;
         top: 2rem;
         right: 2rem;
+    }
+    .scrollingNav {
+        opacity:0;
     }
 }
