--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -1,11 +1,63 @@
-.aboutContainer {
+.aboutSection {
     display: flex;
-    justify-content: center;
     min-height:100vh;
     width:100vw;
-    padding: 5%;
-    display: flex;
     align-items: center;
     flex-direction: column;
+    padding-left: 10%;
+    padding-right: 10%;
+    justify-content: center;
+}
 
+.aboutMessage {
+    text-align:left;
+}
+
+.imageDiv {
+    width: 100%;
+}
+
+.aboutImage {
+    max-width:100%;
+    border-radius: 20rem;
+}
+
+.aboutContainer {
+    gap: 5%;
+    margin-bottom: 2rem;
+    margin-top: 2rem;
+    display:flex;
+
+}
+
+.aboutDetails {
+    margin-top:5%;
+    justify-content: center;
+    flex-direction: column;
+}
+
+.aboutDetailContainers {
+    justify-content: center;
+    display: flex;
+    gap: 5%;
+    padding-bottom:5%;
+}
+
+.aboutDetailContainer {
+    padding: 1.5rem;
+    flex: 1;
+    background: var(--main-blue);
+    border-radius: 3rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: var(--main-white);
+    text-align: center;
+}
+
+.aboutIcon {
+    padding:1rem;
+    font-size: 3vw;
+}
+
+.aboutSection h2 {
+    text-align: center;
 }
