--- a/src/styles/home.css
+++ b/src/styles/home.css
@@ -14,8 +14,8 @@
 }
 
 .homeText {
-    padding-left: 30%;
-    padding-right: 30%;
+    padding-left: 20%;
+    padding-right: 20%;
     padding-bottom:10%;
 }
 
@@ -33,6 +33,6 @@
     }
 
     .ScrollWord {
-        font-size: 2rem;
+        font-size: 8vw;
     }
 }
