--- a/src/styles/nav.css
+++ b/src/styles/nav.css
@@ -8,7 +8,7 @@ header {
 	justify-content: space-between;
 	height: 80px;
 	padding: 0 2rem;
-    color: var(--main-white);
+    color: var(--main-dark-blue);
     background-color: var(--main-blue);
     align-items:baseline;
 }
@@ -22,7 +22,7 @@ header .nav-btn {
     visibility: hidden;
     opacity: 0;
     font-size: 1.8rem;
-    color: var(--main-white);
+    color: var(--main-dark-blue);
 }
 
 .nav {
@@ -32,7 +32,7 @@ header .nav-btn {
 }
 
 .site-title {
-    font-size:1vw;
+    font-size:2rem;
     font-family: roboto-flex;
 }
 
@@ -46,7 +46,7 @@ header ul {
     list-style: none;
     display: flex;
     gap: 4rem;
-    font-size: 1vw;
+    font-size: 1rem;
 }
 
 header a {
@@ -58,7 +58,7 @@ header a {
 }
 
 .nav a:hover {
-    background-color: #777;
+    background-color: var(--main-blue-accent);
 }
 
 .scrollingNav {
@@ -69,38 +69,38 @@ header a {
     left:0;
     justify-content: center;
     align-items: center;
-    padding:1rem;
     white-space: nowrap;
     background-color: transparent;
+    z-index: 999;
 }
 
 .scrollingNav ul {
-    padding: 1rem;
+    padding: .75rem;
     margin: 0;
     list-style: none;
     display: flex;
     gap: 3rem;
     font-size: 1rem;
-    background: #73AD21;
+    background: var(--main-baby-blue);
     border-radius: 20px;
 
 }
 
 .scrollingNav li {
-    background: #73AD21;
+    background: var(--main-baby-blue);
 }
 
 .scrollingNav a {
     text-decoration: none;
     border-radius: 20px;
-    background: #73AD21;
+    background: var(--main-baby-blue);
     padding: 10px;
-    font-size: .75vw;
+    font-size: 1rem;
 
 }
 
 .scrollingNav a:hover {
-    background-color: #777;
+    background-color: var(--main-blue-accent);
 }
 
 @media only screen and (max-width: 1100px){
