--- a/src/styles/main.css
+++ b/src/styles/main.css
@@ -16,11 +16,11 @@ html {
     --main-baby-blue: #e5f8f8;
     --main-dark-blue: #5c92a6;
     --main-blue-accent: #a8cad6;
-    --main-blue: #d6dfe8;
+    --main-blue: #e1f0ff;
     --main-light-blue: #cbf2f5;
     --main-green: #eef6f2;
     --main-dark-green: #8bcfd3;
-    --main-purple:#c288e9;
+    --main-purple:#fefcec;
 }
 
 
