--- a/src/styles/projects.css
+++ b/src/styles/projects.css
@@ -4,8 +4,7 @@
     width:100vw;
     align-items: center;
     flex-direction: column;
-    padding-left: 15vw;
-    padding-right: 15vw;
+    padding:15vw;
     justify-content: center;
 }
 
@@ -20,12 +19,12 @@
 .projectElement {
     padding-top: 3%;
     display: flex;
-    height: 30rem;
+    height: 33rem;
     width: 24rem;
-    background-color:var(--main-purple);
+    background-color:var(--main-turq);
     border-radius: 2rem;
     align-items: center;
-    justify-content: center;
+    justify-content: space-around;
     flex-direction: column;
     gap: 15px;
     border: rgb(53, 53, 53) 0.4rem solid;
@@ -45,6 +44,16 @@
     border-radius: 2rem;
     border: rgb(53, 53, 53) 0.1rem solid;
     border-color: var(--main-blue-accent);
+    object-fit: cover;
+}
+
+.projectImageExpanded {
+    height:100%;
+    width:100%;
+    border-radius: 2rem;
+    border: rgb(53, 53, 53) 0.1rem solid;
+    border-color: var(--main-blue-accent);
+    object-fit: cover;
 }
 
 .projectName {
@@ -57,6 +66,7 @@
 }
 
 .elementProjectTech {
+    padding: 10px;
     display: flex;
     flex-wrap: wrap;
     justify-content: center;
@@ -86,10 +96,13 @@
     background-color: transparent;
 }
 
+.githubIcon :hover {
+    color:var(--main-purple);
+}
+
 .projectExpandedView {
     position: relative;
-    height:600px;
-    width:400px;
+
     z-index:10;
     border-radius: 2rem;
     border: rgb(53, 53, 53) 0.1rem solid;
@@ -102,14 +115,28 @@
 }
 
 .projectExpandedViewText {
-    gap: 5%;
+    display:flex;
+    flex-direction: column;
     background-color: transparent;
     border-radius: 2rem;
     padding: 5%;
+    align-items:center;
 }
 
 .project2ndImageDiv {
     background-color: transparent;
     height: 350px;
     width:400px;
+    display: flex;
+    justify-content: center;
+
+}
+
+.projectTitle {
+    padding: 10px;
+}
+
+.projectContainer h1 {
+    padding: 2rem;
+    
 }
