--- a/src/styles/timeline.css
+++ b/src/styles/timeline.css
@@ -16,7 +16,8 @@
 
 .timelineIcon {
     font-size: 3rem;
-    padding-right: 3rem;
+    padding-right: 2rem;
+    background-color: transparent;
 }
 
 .largeScreenIcon {
@@ -34,14 +35,15 @@
 
 .timelineElementContent {
     margin-top: 2rem;
+    margin-left:1rem;
     padding: 2rem;
     width: 500px;
     height:320px;
-    /* border: rgb(53, 53, 53) 0.1rem solid; */
-    /* border-color: var(--main-white); */
     border-radius: 3rem;
     background-color: var(--main-green);
     text-align: center;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
+
 }
 
 .elementTitle {
@@ -102,4 +104,5 @@
     width:100%;
     height:100%;
     border-radius: 3rem;
+    box-shadow: 0 0 5px rgba(0, 0, 0, 0.2);
 }
