--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -6,6 +6,7 @@
     flex-direction: column;
     padding-left: 10%;
     padding-right: 10%;
+    padding-top: 5%;
     justify-content: center;
     background-color: var(--main-blue);
     text-align:center;
