--- a/src/styles/contactme.css
+++ b/src/styles/contactme.css
@@ -1,7 +1,7 @@
 .contactMeContainer {
     display: flex;
-    min-height:100vh;
-    width:100vw;
+    /* min-height:100vh;
+    width:100vw; */
     align-items: center;
     flex-direction: column;
     padding:10vw;
@@ -12,23 +12,32 @@
     padding: 10rem;
 }
 
+.contactMeText a {
+    padding: 1rem;
+}
+
+.contactMeText a :hover {
+    color:var(--main-white);
+}
+
 .contactMeHeading {
     border-color: transparent;
 }
 
 .socials {
     list-style-type: none; 
-    min-height:100%;
-    width:100%;
+
     justify-content: center;
     align-items: center;
-    display: flex;
+    display: block;
+    padding:1rem;
+    box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+    border-radius: 3rem;
 }
 
 .socials li {
-    display: inline-block;
     padding: 5%;
-   
+    float: left;
 }
 
 .socials a {
@@ -37,4 +46,7 @@
 
 .socials a :hover {
     color:var(--main-white);
+}
+.text {
+    padding: 5%;
 }
