--- a/src/styles/about.css
+++ b/src/styles/about.css
@@ -29,7 +29,7 @@
 .aboutContainer {
     padding:5%;
     display:flex;
-    flex-wrap: wrap;
+    flex-direction:row;
     justify-content: center;
 }
 
@@ -44,8 +44,22 @@
 }
 
 .aboutDesc {
-    display:flexbox;
-    padding:4rem;
+    padding-top: 15%;
     width:100%;
     flex-wrap:nowrap;
+    text-align:start;
+}
+
+.aboutDesc b {
+    font-weight:bolder;
+    color: var(--main-purple)
+}
+
+@media only screen and (max-width: 1100px){
+    .aboutContainer {
+        padding:5%;
+        display:flexbox;
+        flex-direction:column;
+        justify-content: center;
+    }
 }
