--- a/src/styles/contactme.css
+++ b/src/styles/contactme.css
@@ -25,11 +25,11 @@
 }
 
 .socials {
+    width:100%;
     list-style-type: none; 
-
     justify-content: center;
     align-items: center;
-    display: block;
+    display: flex;
     padding:1rem;
     box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
     border-radius: 3rem;
@@ -49,4 +49,18 @@
 }
 .text {
     padding: 5%;
+}
+
+@media only screen and (max-width: 1100px){
+    .socials {
+        width:100%;
+        list-style-type: none; 
+        justify-content: center;
+        align-items: center;
+        display: block;
+        padding:1rem;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.2);
+        border-radius: 3rem;
+    }
+
 }
